<resources>
    <string name="app_name">RoadSideAssistance</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="key_lost">Key Lost</string>
    <string name="battery_problem">Battery Problem</string>
    <string name="out_of_fuel">Out Of Fuel</string>
    <string name="tyre_problem">Tyre Problem</string>
    <string name="collision_damage">Collision Damage</string>
    <string name="title_activity_maps">Map</string>
    <string name="road_side_assistance">Road Side Assistance</string>
    <string name="_data_data_">data/data/</string>
</resources>
